samples/_failures_safe/1761073020_9b9d3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46f529d2.c: In function ‘print_stats’:
./samples/SAFE/__tmp_46f529d2.c:143:5: error: expected expression at end of input
  143 |     printf("Most frequent level: %s\n",
      |     ^~~~~~
./samples/SAFE/__tmp_46f529d2.c:143:5: error: expected declaration or statement at end of input
